--- a/404.html
+++ b/404.html
@@ -14,3 +14,15 @@ title: "404"
 .b{width:100%;text-align:center;height:400px;position:absolute;top:50%;margin-top:-230px}.a{width:150px;height:50px;margin-top:30px}.a a{display:block;float:left;width:150px;height:50px;background:#fff;text-align:center;line-height:50px;font-size:18px;border-radius:25px;color:#333}.a a:hover{color:#000;box-shadow:#fff 0 0 20px}
 p{color:#fff;margin-top:40px;font-size:24px;}
 #num{margin:0 5px;font-weight:bold;}
+</style>
+<script type="text/javascript">
+	var num=8;
+	var image=new Array()
+	image[0]="http://n.sinaimg.cn/tech/5_img/upload/1b7d1263/w876h534/20180207/6cot-fyrhcqz3834440.jpg"
+	image[1]="http://n.sinaimg.cn/tech/5_img/upload/1b7d1263/w1100h619/20180207/8Kg2-fyrhcqz3686930.jpg"
+	image[2]="http://n.sinaimg.cn/tech/5_ori/upload/1b7d1263/w380h229/20180207/jur6-fyrhcqz3824536.gif"
+	image[3]="http://n.sinaimg.cn/tech/5_ori/upload/1b7d1263/w380h229/20180207/a9mL-fyrhcqz3824535.gif"
+	image[4]="http://n.sinaimg.cn/tech/5_img/upload/1b7d1263/w1100h619/20180207/dq8q-fyrhcqz3686919.jpg"
+	image[5]="http://n.sinaimg.cn/tech/5_img/upload/1b7d1263/w1100h619/20180207/ff4q-fyrhcqz3686925.jpg"
+	image[6]="http://n.sinaimg.cn/tech/5_ori/upload/1b7d1263/w380h229/20180207/8KPU-fyrhcqz3824517.gif"
+	image[7]="http://7xowaa.com1.z0.glb.clouddn.com/back.jpg"
