--- a/404.html
+++ b/404.html
@@ -42,7 +42,27 @@ p{color:#fff;margin-top:40px;font-size:24px;}
 		}
 		if(num<0){
 			document.getElementById("num").innerHTML=0;
-			location.href="http://rnd-github.huawei.com/pages/z00416657/z00416657.github.io/";
+			location.href="http://zhuangkechen.github.io";
 			}
 		}
 	setInterval("redirect()", 1000);
+</script><!-- hexo-inject:begin --><!-- hexo-inject:end -->
+</head>
+
+<body onload="redirect();">
+<!-- hexo-inject:begin --><!-- hexo-inject:end --><div class="whole">
+	<image id='image1' src="http://7xowaa.com1.z0.glb.clouddn.com/back.jpg">
+	<!--img src="http://n.sinaimg.cn/tech/5_img/upload/1b7d1263/w876h534/20180207/6cot-fyrhcqz3834440.jpg"-->
+	<!--img src="http://n.sinaimg.cn/tech/5_img/upload/1b7d1263/w1100h619/20180207/dq8q-fyrhcqz3686919.jpg" -->
+    <div class="mask"></div>
+</div>
+<div class="b">
+		<!--img src="http://7xowaa.com1.z0.glb.clouddn.com/404.png" class="center"-->
+		<p>
+			您查找的页面正在搭乘重型猎鹰，开着红色小跑车飞向火星...<br>
+            预计<span id="num"></span>秒后抵达预定轨道！！
+		</p>
+	</div><!-- hexo-inject:begin --><!-- hexo-inject:end -->
+
+</body>
+</html>    
